--- a/src/style.css
+++ b/src/style.css
@@ -7,21 +7,25 @@ body {
     display: grid;
     grid-template-columns: 0.2fr 0.8fr;
     grid-template-rows: 0.2fr 0.8fr;
+    color: #EDECEE;
 }
 
-.header {
+#header {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     background-color: #211D25;
 }
 
-.sidebar {
+#sidebar {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     background-color: #372F39;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
 }
 
-.main {
+#main {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     background-color: #151116;
