--- a/src/style.css
+++ b/src/style.css
@@ -3,24 +3,29 @@
     --priority-medium: orange;
     --priority-high: red;
     --priority-width: 8px;
+
+    --styled-white: #EDECEE;
+    --styled-dark: #211D25;
 }
 
 html, body {
     height: 100%;
     width: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
     display: grid;
     grid-template-columns: 0.2fr 0.8fr;
     grid-template-rows: 0.2fr 0.8fr;
-    color: #EDECEE;
+    color: var(--styled-white);
 }
 
 #header {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
-    background-color: #211D25;
+    background-color: var(--styled-dark);
 }
 
 #sidebar {
@@ -53,7 +58,7 @@ body {
 
 .todo-element:hover {
     background-color: #594c5c;
-    transform: scale(1.005);
+    transform: scale(1.002);
 }
 
 #todo-container {
@@ -85,4 +90,56 @@ body {
 
 .todo-card-icon {
     height: 30px;
+}
+
+.details-btn {
+    /* outline: 5px solid white; */
+    border: 1px solid var(--styled-white);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+}
+
+.details-btn:hover {
+    background-color: var(--styled-white);
+    color: var(--styled-dark);
+
+}
+
+/* Modal styles */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    backdrop-filter: blur(1px);
+  }
+  
+.modal-content {
+    background-color: var(--styled-dark);
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 10px;
+}
+  
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
