--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,8 @@ body {
 .project-name:hover {
     text-decoration: underline;
     transform: scale(1.05);
-    transition: all 0.15s ease;
+    transition: all 0.2s ease;
+    background-color: #151116;
 }
 
 #projects-container {
@@ -87,7 +88,12 @@ body {
 }
 
 .project-name {
-    /* background-color: black; */
+    border-radius: 30px;
+    padding: 10px;
+    width: auto;
+}
+
+.project-element-container {
     border-radius: 30px;
     flex: 1;
     padding: 10px;
